--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <!-- اسم التطبيق -->
     <meta name="apple-mobile-web-app-title" content="اخبار السودان">
-    <meta name="متجر الأمل" content="اخبار السودان">
+    <meta name="اخبار السودان" content="اخبار السودان">
     <!-- تحديد أيقونة الموقع -->
     <link rel="icon" href="img/IMG_٢٠٢٥٠٢٢٣_٢٣٤٤٢٣_(192_x_192_pixel).jpg">
     
